@@ -6225,6 +6225,39 @@ data:extend({
       time = 120
     }
   },
+  {
+    type = "technology",
+    name = "pm-specialised-crystal-growing",
+    icon_size = 256,
+    icon = "__periodic-madness__/graphics/icons/placeholder-tech.png",
+    effects =
+    {
+        PM.unlock_recipe("pm-ruby"),
+        PM.unlock_recipe("pm-citrine"),
+        PM.unlock_recipe("pm-emerald"),
+        PM.unlock_recipe("pm-sapphire"),
+        PM.unlock_recipe("pm-lapis-lazuli"),
+        PM.unlock_recipe("pm-garnet")
+    },
+    prerequisites = {"pm-advanced-advanced-transition-metal-pack-unlock", "pm-alkaline-earth-metal-pack-unlock", "pm-crystal-seeding"},
+    unit =
+    {
+      count = 550,
+      ingredients =
+      {
+        {"automation-science-pack", 1},
+        {"logistic-science-pack", 1},
+        {"pm-advanced-advanced-transition-metal-science-pack", 1},
+        {"chemical-science-pack", 1},
+        {"pm-post-transition-metal-science-pack", 1},
+        {"pm-alkali-metal-science-pack", 1},
+        {"pm-metalloid-science-pack", 1},
+        {"pm-alkaline-earth-metal-science-pack", 1},
+        {"pm-advanced-advanced-advanced-transition-metal-science-pack", 1}
+      },
+      time = 120
+    }
+  },
 --MARK: NB science
   {
     type = "technology",
