@@ -22,6 +22,7 @@ Date: 2025-28-09
     - Added new technologies and infinite bonus technologies to post-space science. Not all of them though, some gotta be saved for the post-game ;)
     - Added mining drill 3's! they have a 75% drain rate, a larger radius and an extra module slot, totaling to 5.
     - Added mixing tank 3's as well, unlocked in AA-ATM science. They are double the speed of mixing tank 2's.
+    - Added a way to only grow a certain type of gem, unlocked in both A-AATM and AEM science.
 
   Changes:
     - Changed vanilla rocket fuel into Solid rocket fuel.
